<!-- Jason Xu 991545529 -->
<resources>
    <string name="app_name">Jason Xu 991545529</string>
    <string name="title_home">1st Tab</string>
    <string name="title_dashboard">2nd Tab</string>
    <string name="title_notifications">3rd Tab</string>
    <string name="alert_dialog_exit">Do you want to exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="androidbot_imageview">Android Bot</string>
    <string name="button_clear">Clear Canvas</string>
    <string name="button_updatePen">Update Pen</string>
    <string name="red">Red</string>
    <string name="blue">Blue</string>
    <string name="yellow">Yellow</string>
    <string name="thin">Thin</string>
    <string name="medium">Medium</string>
    <string name="thick">Thick</string>

    <string name="button_service">Launch Camera</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="speed1">Speed 1</string>
    <string name="speed2">Speed 2</string>
    <string name="speed3">Speed 3</string>
    <string name="speed4">Speed 4</string>
    <string name="start_animation">Start Animation</string>

    <string name="first_name">Jason</string>
    <string name="last_name">Xu</string>
    <string name="start_moon">Start Moon</string>
    <string name="stop_moon">Stop Moon</string>
</resources>