<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="jason.xu.s991545529.ui.jasonfragment.JasonFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_jason" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="jason.xu.s991545529.ui.xufragment.XuFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_xu" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="jason.xu.s991545529.ui.s991545529fragment.S991545529Fragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_s991545529" />
</navigation>