<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BED7FF"
    tools:context=".ui.xufragment.XuFragment">

    <Button
        android:id="@+id/jasonButtonService"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="600dp"
        android:text="@string/button_service"
        android:textColor="#00FF4D"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <RadioGroup
        android:id="@+id/jasonRadioGroupAnimationSpeed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/jasonButtonService">

        <RadioButton
            android:id="@+id/jasonRadioButtonSpeed1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:checked="true"
            android:text="@string/speed1"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="27dp" />

        <RadioButton
            android:id="@+id/jasonRadioButtonSpeed2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:checked="false"
            android:text="@string/speed2"
            tools:layout_editor_absoluteY="73dp" />

        <RadioButton
            android:id="@+id/jasonRadioButtonSpeed3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/speed3"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="121dp" />

        <RadioButton
            android:id="@+id/jasonRadioButtonSpeed4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/speed4"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="121dp" />
    </RadioGroup>

    <Button
        android:id="@+id/jasonButtonStartAnimation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:text="@string/start_animation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/jasonRadioGroupAnimationSpeed"
        app:layout_constraintTop_toBottomOf="@+id/jasonButtonService" />

    <ImageView
        android:id="@+id/jasonImageViewAnimation"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/jasonRadioGroupAnimationSpeed"
        app:layout_constraintTop_toBottomOf="@id/jasonButtonStartAnimation" />

</androidx.constraintlayout.widget.ConstraintLayout>